# SimSample

./: .env.example  .gcloudignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  filenames.pkl  main.py  package-lock.json  pyproject.toml  requirements.txt
audio_samples/user_libraries/82cbf7d3-4756-45f0-a5fb-119907c22412/: filenames.pkl
audio_samples/user_libraries/d6e59295-7a62-4ee7-b92f-d4d3a1c382d4/: filenames.pkl
audio_samples/user_libraries/d6e59295-7a62-4ee7-b92f-d4d3a1c382d4/Test folder/: desktop.ini
audio_samples/user_libraries/f3f50f9a-0f0d-4469-9856-7f985161ecd7/: filenames.pkl
static/: style.css
static/js/: app.js
templates/: index.html  login.html  signup.html
tests/: test_audio_processing.py
utils/: audio_processing.py
