[project]
name = "simsample"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "authlib>=1.6.0",
    "faiss-cpu>=1.11.0",
    "flask>=3.1.1",
    "flask-login>=0.6.3",
    "librosa>=0.11.0",
    "np>=1.0.2",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
]
